Start develop auth design

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,7 @@
 [] - Создать админ панель
 [] - Добавить средний рейтинг в карточку товара
 [] - Сделать url.config.ts
+[] - Декомпозировать провайдеры
+[] - Разработать скрыть/показать пароль
+[] - Сделать Skeleton-loader на форме
+[] - Сделать переключение авторизации
