create auth page, start create home page: catalog

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -5,3 +5,6 @@
 [] - Разработать скрыть/показать пароль
 [] - Сделать Skeleton-loader на форме
 [] - Сделать переключение авторизации
+[] - Добавить уведомления для авторизации, ошибок в хуках
+[] - Обработать ошибки в хуках
+[] - Сделать isLoading и isPending для FavoriteButton и AddToCartButton
