Create pagination in catalog

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -8,3 +8,5 @@
 [] - Добавить уведомления для авторизации, ошибок в хуках
 [] - Обработать ошибки в хуках
 [] - Сделать isLoading и isPending для FavoriteButton и AddToCartButton
+[] - Убрать предупреждения
+[] - Сделать красивый section
